--- a/src/app/pages/materials-asm2/materials-asm2.component.html
+++ b/src/app/pages/materials-asm2/materials-asm2.component.html
@@ -197,7 +197,7 @@
 
             <th>Mã hàng</th>
             <th>PO</th>
-                            <th>Batch</th>
+                            <th>IMD</th>
             <th>Tồn đầu</th>
             <th>NK</th>
             <th title="Số lượng đã xuất từ RM2 outbound (tự động cập nhật)">Đã xuất</th>
