--- a/src/app/pages/materials-asm2/materials-asm2.component.html
+++ b/src/app/pages/materials-asm2/materials-asm2.component.html
@@ -231,7 +231,7 @@
             </td>
             <td class="po-cell" [class.duplicate-cell]="material.isDuplicate">{{material.poNumber}}</td>
             <td class="date-cell" [class.duplicate-cell]="material.isDuplicate">
-              {{material.importDate ? material.importDate.toLocaleDateString('en-GB').split('/').join('') : 'N/A'}}
+              {{material.importDate || 'N/A'}}
             </td>
             <td class="number-cell" [class.duplicate-cell]="material.isDuplicate">
               <input type="number" 
