--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -295,7 +295,7 @@
               {{material.poNumber}}
             </td>
             <td class="batch-cell readonly-cell">
-              {{material.importDate ? material.importDate.toLocaleDateString('en-GB').split('/').join('') : 'N/A'}}
+              {{material.importDate || 'N/A'}}
             </td>
             <td class="number-cell readonly-cell">
               {{material.exportQuantity}}
@@ -315,7 +315,7 @@
         </tbody>
       </table>
 
-      <!-- Mobile Table - 5 Columns -->
+      <!-- Mobile Table - 6 Columns -->
       <table class="excel-table mobile-optimized" *ngIf="isMobile">
         <thead>
           <tr>
@@ -323,6 +323,7 @@
             <th class="col-po">Số PO</th>
             <th class="col-batch">IMD</th>
             <th class="col-quantity">Xuất</th>
+            <th class="col-employee">Mã nhân viên</th>
             <th class="col-production">Lệnh sản xuất</th>
           </tr>
         </thead>
@@ -335,10 +336,13 @@
               {{material.poNumber}}
             </td>
             <td class="batch-cell readonly-cell">
-              {{material.importDate ? material.importDate.toLocaleDateString('en-GB').split('/').join('') : 'N/A'}}
+              {{material.importDate || 'N/A'}}
             </td>
             <td class="number-cell readonly-cell">
               {{material.exportQuantity}}
+            </td>
+            <td class="employee-cell readonly-cell">
+              {{material.employeeId || 'N/A'}}
             </td>
             <td class="production-order-cell readonly-cell">
               {{material.productionOrder || 'N/A'}}
